Fixed front page channel not showing

--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
     <script src="lib/odometer/odometer.min.js"></script>
     <script src="lib/angular-odometer/dist/angular-odometer.min.js"></script>
 	<script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+    <script src="lib/ngcordova-wrapper-nativestorage/dist/ngcordova-wrapper-nativestorage.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <!-- Cordova is bootstrapped by ionic-platform-web-client, uncomment this if you remove ionic-platform-web-client... -->
